tried to solve issues with catch blocks